Update stack management pass

--- a/lib/Transforms/StackManagement/CMakeLists.txt
+++ b/lib/Transforms/StackManagement/CMakeLists.txt
@@ -1,3 +1,5 @@
 add_llvm_loadable_module( LLVMStackManagement
-  StackManagement.cpp
-  )
+	function.cpp
+	instrumentation.cpp
+	StackManagement.cpp
+	)
